--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.3"
+    "eslint": "^8.29.0",
+    "vite": "^3.2.3",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
